--- a/01SOURCE/springboot/bootweb/src/main/resources/templates/sys/workflow/announcement/announcementApply.html
+++ b/01SOURCE/springboot/bootweb/src/main/resources/templates/sys/workflow/announcement/announcementApply.html
@@ -50,7 +50,7 @@
 			</ll:fillareatb>
 		</ll:filllayout>
 	</form>
-	<script type="text/javascript" th:insert="sys/workflow/announcement/announcementApplyScript.js"></script>
+	<script type="text/javascript" th:include="sys/workflow/announcement/announcementApplyScript.js"></script>
 	</style>
 </body>
 </html>
