--- a/01SOURCE/springboot/bootworkflow/src/main/resources/templates/model/modelDialog.html
+++ b/01SOURCE/springboot/bootworkflow/src/main/resources/templates/model/modelDialog.html
@@ -1,9 +1,7 @@
-
-<%
-	/* 
+<!-- 	/* 
 	 * 创   建   人： 刘磊
 	 * 
-	 * 创   建   时   间 ： 2017年11月16日
+	 * 创   建   时   间 ： 2017-10-11 下午10:02:29
 	 * 
 	 * 类   说   明 ：
 	 * 
@@ -12,16 +10,10 @@
 	 * 修改人： 修改日期： 修改内容：
 	 * 
 	 * 修改人： 修改日期： 修改内容：
-	*/
-%>
-<%@ page language="java" contentType="text/html; charset=UTF-8" pageEncoding="UTF-8"%>
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
-<html>
+	*/ -->
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-<title>Insert title here</title>
-<%@ include file="/template/base.jsp"%>
-<script type="text/javascript" src="modelDialogScript.js"></script>
+<template th:replace="/base.html"></template>
 </head>
 <body>
 	<form style="width: 98%;">
@@ -41,5 +33,6 @@
 				</ll:toolbar>
 			</ll:fillareatb>
 		</ll:filllayout>
+		<script type="text/javascript" th:include="model/modelDialogScript.js"></script>
 	</form>
 </body>
