--- a/01SOURCE/springboot/bootworkflow/src/main/resources/templates/model/modelList.html
+++ b/01SOURCE/springboot/bootworkflow/src/main/resources/templates/model/modelList.html
@@ -1,6 +1,4 @@
-
-<%
-	/* 
+<!-- 	/* 
 	 * 创   建   人： 刘磊
 	 * 
 	 * 创   建   时   间 ： 2017-10-11 下午10:02:29
@@ -12,15 +10,10 @@
 	 * 修改人： 修改日期： 修改内容：
 	 * 
 	 * 修改人： 修改日期： 修改内容：
-	*/
-%>
-<%@ page language="java" contentType="text/html; charset=UTF-8" pageEncoding="UTF-8"%>
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
-<html>
+	*/ -->
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-<title>Insert title here</title>
-<%@ include file="/template/base.jsp"%>
+<template th:replace="/base.html"></template>
 </head>
 <body>
 	<form>
@@ -63,7 +56,6 @@
 			</ll:fillarealr>
 		</ll:filllayout>
 	</form>
-	<script type="text/javascript" src="modelListScript.js"></script>
-	</style>
+	<script type="text/javascript" th:include="model/modelListScript.js"></script>
 </body>
 </html>
