--- a/01SOURCE/vue/vuell/src/lib/css/base.css
+++ b/01SOURCE/vue/vuell/src/lib/css/base.css
@@ -1,4 +1,34 @@
-*{
-    margin: 0;
-    padding: 0;
+* {
+  margin: 0;
+  padding: 0;
+}
+
+html,
+body,
+form,
+top-container {
+  width: 100%;
+  height: 100%;
+}
+
+.ll-tabs {
+  height: 100%;
+  box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  /* Firefox */
+  -webkit-box-sizing: border-box;
+  /* Safari */
+}
+
+.el-tabs__content {
+  height: calc(100% - 41px);
+  box-sizing: border-box;
+  overflow: auto;
+  -moz-box-sizing: border-box;
+  /* Firefox */
+  -webkit-box-sizing: border-box;
+  /* Safari */
+}
+.el-tabs__header{
+  margin: 0 0 0px;
 }
