menu table tabs

--- a/01SOURCE/springboot/bootworkflow/src/main/resources/templates/sys/menu/menu.html
+++ b/01SOURCE/springboot/bootworkflow/src/main/resources/templates/sys/menu/menu.html
@@ -11,6 +11,7 @@
 	 * 
 	 * 修改人： 修改日期： 修改内容：
 	*/ -->
+<!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
 <template th:replace="base.html"></template>
