--- a/01SOURCE/springboot/bootwebvue/src/main/resources/templates/base.html
+++ b/01SOURCE/springboot/bootwebvue/src/main/resources/templates/base.html
@@ -1,4 +1,15 @@
 <script th:src="@{/js/vue/vue.js}" charset="utf-8"></script>
-<script th:src="@{/js/vue/index.js}" charset="utf-8"></script>
 <script th:src="@{/js/vueplugins.js}" charset="utf-8"></script>
+<script th:src="@{/js/framework/jquery-1.12.4.js}" charset="utf-8"></script>
+<script th:src="@{/js/underscore/underscore-min-1.9.1.js}" charset="utf-8"></script>
+<script th:src="@{/js/framework/framework-jquery.js}" charset="utf-8"></script>
+<script th:src="@{/js/framework/framework-model.js}"\ charset="utf-8"></script>
+<script th:src="@{/js/framework/framework-model-context.js}" charset="utf-8"></script>
+<script th:src="@{/js/framework/framework-common.js}" charset="utf-8"></script>
 <link rel="stylesheet" th:href="@{/css/base.css}" media="all">
+<script  th:inline="javascript">
+	var $$pageContextPath = [[@{/}]];
+	var ajaxResponse=new _LL_Model.AjaxResponse([[${LLAjaxResponse}]]);
+</script>
+<!-- <script th:src="@{/js/vue/index.js}" charset="utf-8"></script> -->
+<!-- <link rel="stylesheet" th:href="@{/css/index.css}" media="all"> -->
