--- a/01SOURCE/vue/vuell/src/lib/css/base.css
+++ b/01SOURCE/vue/vuell/src/lib/css/base.css
@@ -19,9 +19,9 @@ top-container {
   -webkit-box-sizing: border-box;
   /* Safari */
 }
-.el-main{
+/* .el-main{
   height:100%;
-}
+} */
 .el-tabs__content {
   height: calc(100% - 41px);
   box-sizing: border-box;
