--- a/01SOURCE/vue/vuell/templates/testTree.html
+++ b/01SOURCE/vue/vuell/templates/testTree.html
@@ -18,52 +18,65 @@
 </body>
 <script type="text/javascript">
    
-  new Vue({
+  var vm=new Vue({
     el: '#app',
     data: {
         data: [{
-          label: '一级 1',
+          name: '一级 1',
           children: [{
-            label: '二级 1-1',
+            name: '二级 1-1',
             children: [{
-              label: '三级 1-1-1'
+              name: '三级 1-1-1'
             }]
           }]
         }, {
-          label: '一级 2',
+          name: '一级 2',
           children: [{
-            label: '二级 2-1',
+            name: '二级 2-1',
             children: [{
-              label: '三级 2-1-1'
+              name: '三级 2-1-1'
             }]
           }, {
-            label: '二级 2-2',
+            name: '二级 2-2',
             children: [{
-              label: '三级 2-2-1'
+              name: '三级 2-2-1'
             }]
           }]
         }, {
-          label: '一级 3',
+          name: '一级 3',
           children: [{
-            label: '二级 3-1',
+            name: '二级 3-1',
             children: [{
-              label: '三级 3-1-1'
+              name: '三级 3-1-1'
             }]
           }, {
-            label: '二级 3-2',
+            name: '二级 3-2',
             children: [{
-              label: '三级 3-2-1'
+              name: '三级 3-2-1'
             }]
           }]
         }],
         defaultProps: {
           children: 'children',
-          label: 'label'
+          label: 'name'
         }
     },
     methods: {
-      handleNodeClick(data) {
-        console.log(data);
+      handleNodeClick(nodeData,node) {
+        this.$request.request({
+          url:"http://localhost:8083/web/sys/menu/menu-tree/datalist",
+          params:{
+            code:0
+          },
+          body:{
+            code:0
+          }
+        },function(response){
+          vm.$set(nodeData,"children",response.body);
+          
+        },function(response){
+
+        })
       }
     }
   })
