--- a/01SOURCE/vue/vuell/templates/testTree.html
+++ b/01SOURCE/vue/vuell/templates/testTree.html
@@ -12,7 +12,7 @@
 
 <body>
   <div id="app" style="height: 100%;width: 100%;">
-    <ll-nav-tree :items="data" :props="defaultProps" accordion @node-click="handleNodeClick">
+    <ll-nav-tree :items="data" :props="defaultProps" :datasource="datasource" accordion @node-click="handleNodeClick">
     </ll-nav-tree>
   </div>
 </body>
@@ -21,6 +21,7 @@
   var vm=new Vue({
     el: '#app',
     data: {
+        datasource:"http://localhost:8083/web/sys/menu/menu-tree/datalist",
         data: [{
           name: '一级 1',
           children: [{
@@ -63,20 +64,20 @@
     },
     methods: {
       handleNodeClick(nodeData,node) {
-        this.$request.request({
-          url:"http://localhost:8083/web/sys/menu/menu-tree/datalist",
-          params:{
-            code:0
-          },
-          body:{
-            code:0
-          }
-        },function(response){
-          vm.$set(nodeData,"children",response.body);
+        // this.$request.request({
+        //   url:"http://localhost:8083/web/sys/menu/menu-tree/datalist",
+        //   params:{
+        //     code:0
+        //   },
+        //   body:{
+        //     code:0
+        //   }
+        // },function(response){
+        //   //vm.$set(nodeData,"children",response.body);
           
-        },function(response){
+        // },function(response){
 
-        })
+        // })
       }
     }
   })
