--- a/01SOURCE/vue/vuell/templates/testTree.html
+++ b/01SOURCE/vue/vuell/templates/testTree.html
@@ -23,43 +23,12 @@
     data: {
         datasource:"http://localhost:8083/web/sys/menu/menu-tree/datalist",
         data: [{
-          name: '一级 1',
-          children: [{
-            name: '二级 1-1',
-            children: [{
-              name: '三级 1-1-1'
-            }]
-          }]
-        }, {
-          name: '一级 2',
-          children: [{
-            name: '二级 2-1',
-            children: [{
-              name: '三级 2-1-1'
-            }]
-          }, {
-            name: '二级 2-2',
-            children: [{
-              name: '三级 2-2-1'
-            }]
-          }]
-        }, {
-          name: '一级 3',
-          children: [{
-            name: '二级 3-1',
-            children: [{
-              name: '三级 3-1-1'
-            }]
-          }, {
-            name: '二级 3-2',
-            children: [{
-              name: '三级 3-2-1'
-            }]
-          }]
+          name: '菜单树',
         }],
         defaultProps: {
           children: 'children',
-          label: 'name'
+          label: 'name',
+          isLeaf:'isLeaf'
         }
     },
     methods: {
