--- a/01SOURCE/vue/vuell/src/lib/css/base.css
+++ b/01SOURCE/vue/vuell/src/lib/css/base.css
@@ -19,9 +19,10 @@ top-container {
   -webkit-box-sizing: border-box;
   /* Safari */
 }
-/* .el-main{
-  height:100%;
-} */
+.el-container .el-main,.el-container .el-header{
+  margin:0;
+  padding:0;
+} 
 .el-tabs__content {
   height: calc(100% - 41px);
   box-sizing: border-box;
@@ -39,9 +40,9 @@ top-container {
   width:100%;
 }
 .el-form-item__content{
-  width:-webkit-calc(100% - 100px); 
+  /* width:-webkit-calc(100% - 100px); 
   width:-moz-calc(100% - 100px); 
-  width:calc(100% - 100px); 
+  width:calc(100% - 100px);  */
   white-space:nowrap;
   text-overflow:ellipsis;
 }
@@ -51,4 +52,22 @@ top-container {
 }
 .el-form-item{
   margin-bottom: 15px;
+}
+.el-form--label-top .el-form-item__label {
+  padding: 0 0 0px; 
+  line-height: 20px;
+}
+.el-card {
+  border: 0px solid #ebeef5; 
+}
+.el-card .el-card__header {
+  padding: 5px 10px;
+  border: 0px; 
+  background: #ebeef5;
+}
+.el-table td, .el-table th {
+  padding: 8px 0;
+}
+.el-table td .cell{
+  white-space: nowrap;
 }
