--- a/01SOURCE/vue/vuell/templates/testTable.html
+++ b/01SOURCE/vue/vuell/templates/testTable.html
@@ -12,14 +12,23 @@
 
 <body>
   <div id="app" style="height: 100%;width: 100%;">
-    <ll-table :data="tableData">
-      <ll-table-column prop="date" label="日期" :width="180">
-      </ll-table-column>
-      <ll-table-column prop="name" label="姓名" :width="180">
-      </ll-table-column>
-      <ll-table-column prop="address" label="地址">
-      </ll-table-column>
-    </ll-table>
+    <ll-grid :data="tableData" :data-wrap="dataWrap" @current-change="currentChange">
+      <ll-grid-column prop="date" label="日期" :width="180">
+          
+      </ll-grid-column>
+      <ll-grid-column prop="name" label="姓名" :width="180">
+      </ll-grid-column>
+      <ll-grid-column prop="address" label="地址" :width="180">
+      </ll-grid-column>
+      <ll-grid-column
+      align="right" :width="180">
+      <template scope="scope">
+          <span v-if="!(scope.row.editFlag==null?false:scope.row.editFlag)"  @click="handleEdit(scope.row)">{{ scope.row.name }}</span>
+          <span v-if="(scope.row.editFlag==null?false:scope.row.editFlag)" class="cell-edit-input"><ll-input ref="llHiddenInput"  v-model="scope.row.name" placeholder="请输入内容" @blur="handleSave(scope.row)"></ll-input></span>
+          </template>
+    </ll-grid-column>
+      
+    </ll-grid>
   </div>
 </body>
 <script type="text/javascript">
@@ -27,6 +36,34 @@
   new Vue({
     el: '#app',
     data: {
+      inputColumn1:"",
+      dataWrap:{
+        dataList:[{
+          date: "2016-05-02",
+          name: "王小虎1",
+          address: "上海市普陀区金沙江路 1518 弄"
+          },
+          {
+            date: "2016-05-01",
+            name: "王小虎",
+            address: "上海市普陀区金沙江路 1519 弄"
+          },
+          {
+            date: "2016-05-03",
+            name: "王小虎",
+            address: "上海市普陀区金沙江路 1516 弄"
+          },
+          {
+            date: "2016-05-04",
+            name: "王小虎",
+            address: "上海市普陀区金沙江路 1517 弄"
+          },
+        ],
+        pageInfo:{
+          currentPageNum:1,
+          totalElementCount:1000,
+        }
+      },
       tableData: [{
           date: "2016-05-02",
           name: "王小虎1",
@@ -49,6 +86,22 @@
         },
       ],
     },
+    methods:{
+      currentChange(){
+        console.log(this.dataWrap);
+      },
+      // handleEdit:function(row,refIndex){
+      //   console.log(row)
+      //   this.$set(row, "editFlag", true);
+      //   setTimeout(() => {
+      //     this.$refs.llHiddenInput.focus();
+      //   }, 300);
+      // },
+      // handleSave:function(row){
+      //   console.log(row)
+      //   this.$set(row, "editFlag", false);
+      // },
+    }
   })
 </script>
 </html>
