--- a/01SOURCE/vue/vuell/src/templates/testForm.html
+++ b/01SOURCE/vue/vuell/src/templates/testForm.html
@@ -4,8 +4,8 @@
 <head>
   <meta charset="utf-8">
   <title>vueplugin2</title>
-  <script src="../node_modules/vue/dist/vue.js"></script>
-  <script src="../dist/vueplugins.js"></script>
+  <script src="../../node_modules/vue/dist/vue.js"></script>
+  <script src="../../dist/vueplugins.js"></script>
 </head>
 
 <body>
