--- a/01SOURCE/vue/vuell/src/lib/css/base.less
+++ b/01SOURCE/vue/vuell/src/lib/css/base.less
@@ -1,2 +1,23 @@
-@base: #f938ab;
+@baseColor: #409EFF;
 
+.el-table {
+    th {
+        padding: 0 0;
+    }
+ }
+ .el-tabs__item.is-active{
+        color: #FFF;
+        background-color: @baseColor;
+}
+.el-tabs--card>.el-tabs__header {
+    border-bottom: 1px solid @baseColor;
+}
+.el-tabs--card>.el-tabs__header .el-tabs__item.is-active {
+    border-bottom-color: @baseColor;
+}
+.el-tabs--card>.el-tabs__header .el-tabs__nav {
+    border: 0px;
+}
+.el-table td {
+    padding: 5px 0;
+}
